# stl_picker

./: CMakeLists.txt  README.md  custom_geometry.cpp  custom_geometry.h  helper.cpp  helper.h  main.cpp  main.qml
plugin_custom_geometry/: .cmake-format.py  License.txt  Readme.md
plugin_custom_geometry/DownloadManager/: DownloadManager.cpp  DownloadManager.h
plugin_example/: CMakeLists.txt
plugin_example/DownloadManager/: DownloadManagerControls.qml  TestMain.qml
plugin_example/Test/: TestMain.cpp
stl/: test.stl
